...
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_vertical_start_faq"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_horizontal_faq" />


    <Button
        android:id="@+id/moreQuestions"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/moreQuestions"
        android:textColor="@color/white"
...
            android:padding="10dp"
            android:text="@string/FAQTitle"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/question1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reponse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/reponse1"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/question2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reponse2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/reponse2"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/question3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question3"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reponse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/reponse3"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/question4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question4"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reponse4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/reponse4"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/question5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question5"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reponse5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/reponse5"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/question6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/reponse6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/reponse6"
...
