...
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_vertical_start_my_account"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_horizontal_my_account" />

    <Button
        android:id="@+id/logoutButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_logout"
        app:layout_constraintEnd_toStartOf="@id/guideline_margin_vertical_end_my_account"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_horizontal_my_account" />
...
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_vertical_start_my_account"
        app:layout_constraintTop_toBottomOf="@id/logoutButton">

        <ImageView
            android:id="@+id/myAccountPicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/contDescInsertOffer" />

        <TextView
            android:id="@+id/goToProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/profil"
            android:textColor="@color/white"
...
        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToMyOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/myOfferShop"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
        <View
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToMyStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/myStats"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
        <View
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/contactUs"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
        <View
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToFAQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/FAQTitle"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
